[gd_scene load_steps=2 format=3 uid="uid://o1q2hiudogvu"]

[ext_resource type="Script" path="res://scripts/layer_ui.gd" id="1_6uikc"]

[node name="LayerUI" type="ColorRect"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
color = Color(0.190762, 0.190762, 0.190762, 1)
script = ExtResource("1_6uikc")
selected_color = Color(0.359069, 0.359069, 0.359069, 1)
default_color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2

[node name="NameEdit" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Lorem ipsum"
editable = false
expand_to_text_length = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false
flat = true
select_all_on_focus = true
caret_blink = true

[node name="ShowHideButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Hide"

[node name="XButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[connection signal="pressed" from="Button" to="." method="select"]
[connection signal="text_submitted" from="HBoxContainer/NameEdit" to="." method="_on_name_edit_text_submitted"]
[connection signal="pressed" from="HBoxContainer/ShowHideButton" to="." method="_on_layer_toggle_visibility"]
[connection signal="pressed" from="HBoxContainer/XButton" to="." method="_on_delete_layer"]
